# ble_sensor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README2.md  check.sh  flash.sh  flash_softdevice.sh  openocd_nrf52.cfg
cmake/: nRF5x.cmake
config/: gcc_nrf52.ld  sdk_config.h
softdevice/s132/: README.md
src/: ble.c  ble.cpp  ble.h  ble.hpp  ble_config.h  ble_config.hpp  config.cpp  config.hpp  init.c  init.h  init_ble.c  init_ble.h  log.c  log.h  main.c  main.cpp  millis.cpp  millis.hpp  pairing.c  pairing.h  service_if.cpp  service_if.hpp  setup_ble.c  setup_ble.cpp  setup_ble.h  setup_ble.hpp  test.c  test.h
src/sensors/: buttons.c  encoding.c  encoding.h  gpio.c  gpio.h  movement.c  movement.h  sht31.c  sht31.h  simple.c  simple.h  test_sensors.c  test_sensors.h  timers.c  timers.h
src/service/: UUIDS.hpp  authentication.cpp  authentication.hpp  ble_lbs.c  ble_lbs.h  encryption.cpp  encryption.hpp  init_service.c  init_service.cpp  init_service.hpp  keys.hpp  notify.c  notify.h  package.cpp  package.hpp  read.c  read.h  service_if.c  service_if.h  slow_data.cpp  slow_data.hpp  test.c  test.h  write.c  write.h
src/service/characteristics/: dynamic.c  dynamic.h  schedualed.c  schedualed.h
unlock/: README.md
unlock/create_bmp/: README.md  openocd_stm32.cfg
